# smart-recipe-api

./: Cargo.toml  README.md
configuration/: base.yaml
docs/: database.md
migrations/: 20231026140808_setup.sql
src/: configuration.rs  main.rs  telemetry.rs
